--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,354 @@
-body {
+:root {
+  --main-title-color: #fff;
+  --second-title-color: #212121;
+  --third-title-color: #2196f3;
 }
-.image-1 {
-  width: 370px;
-  height: 294px;
+
+body {
+  font-family: "Monserrat", sans-serif;
+}
+
+ul {
+  list-style: none;
+}
+link,
+a {
+  text-decoration: none;
+}
+
+.header-item {
+  list-style: none;
+}
+.email {
+  color: var(--third-title-color);
+}
+.studio-name {
+  color: var(--third-title-color);
+}
+.studio {
+  color: var(--third-title-color);
+}
+
+.our-tell {
+  color: #757575;
+}
+
+.about-our-decisions {
+  width: 1600px;
+  height: 600px;
+  left: 0px;
+  top: 80px;
+  background: #2f303a;
+}
+
+.big-title {
+  width: 696px;
+  height: 120px;
+  left: 452px;
+  top: 280px;
+  color: #ffff;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36em;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+.button-form {
+}
+
+.button {
+  width: 200px;
+  height: 50px;
+  left: 700px;
+  top: 430px;
+
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  padding: auto;
+}
+
+.article-about-us-1 {
+  font-size: 14px;
+  line-height: 1.14em;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.article-about-us-2 {
+  font-size: 14px;
+  line-height: 1.14em;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #212121;
+}
+
+.article-about-us-3 {
+  font-size: 14px;
+  line-height: 1.14em;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #212121;
+}
+
+.article-about-us-4 {
+  font-size: 14px;
+  line-height: 1.14em;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #212121;
+}
+
+.article-about-us-description-1 {
+  width: 270px;
+  height: 75px;
+  left: 215px;
+  top: 800px;
+  font-size: 14px;
+  line-height: 1.71em;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+.article-about-us-description-2 {
+  width: 270px;
+  height: 75px;
+  left: 515px;
+  top: 800px;
+  font-size: 14px;
+  line-height: 1.71em;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.article-about-us-description-3 {
+  width: 270px;
+  height: 75px;
+  left: 815px;
+  top: 800px;
+  font-size: 14px;
+  line-height: 1.71em;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+.article-about-us-description-4 {
+  width: 270px;
+  height: 75px;
+  left: 1115px;
+  top: 800px;
+  font-size: 14px;
+  line-height: 1.71em;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.our-possibilities {
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  padding: 2%;
+  color: var(--second-title-color);
+}
+.photo-1 {
+  width: 270px;
+  height: 368px;
+  left: 215px;
+  top: 1635px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.photo-2 {
+  width: 270px;
+  height: 368px;
+  left: 515px;
+  top: 1635px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.photo-3 {
+  width: 270px;
+  height: 368px;
+  left: 815px;
+  top: 1635px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.photo-4 {
+  width: 270px;
+  height: 368px;
+  left: 1115px;
+  top: 1635px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.out-team-section {
+  width: 264px;
+  height: 42px;
+  left: 668px;
+  top: 1543px;
+  font-size: 36px;
+  line-height: 1.16em;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+.our-team-photo-1 {
+  width: 270px;
+  height: 260px;
+  left: 215px;
+  top: 1635px;
+  background: url(4853.jpg);
+  border-radius: 0px;
+}
+.our-team-photo-2 {
+  width: 270px;
+  height: 260px;
+  left: 515px;
+  top: 1635px;
+  background: url(5844.jpg);
+  border-radius: 0px;
+}
+.our-team-photo-3 {
+  width: 270px;
+  height: 260px;
+  left: 815px;
+  top: 1635px;
+  background: url(16166.jpg);
+  border-radius: 0px;
+}
+.our-team-photo-4 {
+  width: 270px;
+  height: 260px;
+  left: 1115px;
+  top: 1635px;
+  background: url(2968.jpg);
+  border-radius: 0px;
+}
+.our-team-profesionals {
+  width: 264px;
+  height: 42px;
+  left: 668px;
+  top: 1543px;
+}
+
+.our-team-profesionals-1 {
+  font-size: 16px;
+  line-height: 1.18em;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+.our-team-profesionals-2 {
+  font-size: 16px;
+  line-height: 1.18em;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+.our-team-profesionals-3 {
+  font-size: 16px;
+  line-height: 1.18em;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+.our-team-profesionals-4 {
+  font-size: 16px;
+  line-height: 1.18em;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+.our-team-profesionals-position-1 {
+  font-size: 16px;
+  line-height: 1.18em;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+.our-team-profesionals-position-2 {
+  font-size: 16px;
+  line-height: 1.18em;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+.our-team-profesionals-position-3 {
+  font-size: 16px;
+  line-height: 1.18em;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+.our-team-profesionals-position-4 {
+  font-size: 16px;
+  line-height: 1.18em;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+.about-us {
+  width: 1600px;
+  height: 252px;
+  left: 0px;
+  top: 2097px;
+  background: #2f303a;
+}
+.our-name {
+  width: 145px;
+  height: 31px;
+  left: 215px;
+  top: 2157px;
+  font-size: 26px;
+  line-height: 1.19em;
+  letter-spacing: 0.03em;
+  color: #2196f3;
+}
+.our-adress {
+  width: 231px;
+  height: 21px;
+  left: 215px;
+  top: 2208px;
+  font-size: 14px;
+  line-height: 1.71em;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+.our-male {
+  width: 231px;
+  height: 21px;
+  left: 215px;
+  top: 2238px;
+  font-size: 14px;
+  line-height: 1.71em;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+.our-phone {
+  width: 231px;
+  height: 21px;
+  left: 215px;
+  top: 2268px;
+  font-size: 14px;
+  line-height: 1.71em;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.our-contacts-footer {
+  color: #ffffff 60%;
+}
+.studio-name-1 {
+  color: var(--main-title-color);
 }
