--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: "Monserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 ul {
@@ -26,6 +26,13 @@ a {
 }
 .email {
   color: var(--third-title-color);
+}
+.style-studio-name {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.19em;
 }
 .studio-name {
   color: var(--third-title-color);
@@ -109,42 +116,8 @@ a {
   color: #212121;
 }
 
-.article-about-us-description-1 {
-  width: 270px;
-  height: 75px;
-  left: 215px;
-  top: 800px;
-  font-size: 14px;
-  line-height: 1.71em;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-.article-about-us-description-2 {
-  width: 270px;
-  height: 75px;
-  left: 515px;
-  top: 800px;
-  font-size: 14px;
-  line-height: 1.71em;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-
-.article-about-us-description-3 {
-  width: 270px;
-  height: 75px;
-  left: 815px;
-  top: 800px;
-  font-size: 14px;
-  line-height: 1.71em;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
-.article-about-us-description-4 {
-  width: 270px;
-  height: 75px;
-  left: 1115px;
-  top: 800px;
+.article-about-us-description {
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.71em;
   letter-spacing: 0.03em;
@@ -159,40 +132,10 @@ a {
   padding: 2%;
   color: var(--second-title-color);
 }
-.photo-1 {
+.photo {
   width: 270px;
   height: 368px;
   left: 215px;
-  top: 1635px;
-  background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-.photo-2 {
-  width: 270px;
-  height: 368px;
-  left: 515px;
-  top: 1635px;
-  background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-.photo-3 {
-  width: 270px;
-  height: 368px;
-  left: 815px;
-  top: 1635px;
-  background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-.photo-4 {
-  width: 270px;
-  height: 368px;
-  left: 1115px;
   top: 1635px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
