--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,7 @@ a {
   top: 280px;
   color: #ffff;
   font-weight: 900;
+  font-style: normal;
   font-size: 44px;
   line-height: 1.36em;
   text-align: center;
