--- a/css/styles.css
+++ b/css/styles.css
@@ -227,3 +227,9 @@ a {
 .about-all {
   background-color: var(--third-title-color);
 }
+.portfolio-filer {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6em;
+}
